--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,12 +1,11 @@
+sudo: required
 language: generic
 
-sudo: required
-
 services:
-    - docker
+  - docker
 
 before_install:
-    - docker build -t ramchava/react-docker -f Dockerfile.dev .
+  - docker build -t ramchava/react-docker -f Dockerfile.dev .
 
 script:
-    - docker run -e CI=true ramchava/react-docker npm run test
+  - docker run -e CI=true rchava/react-docker npm run test
