--- a/.travis.yaml
+++ b/.travis.yaml
@@ -8,4 +8,4 @@ before_install:
   - docker build -t ramchava/react-docker -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true rchava/react-docker npm run test
+  - docker run -e CI=true ramchava/react-docker npm run test
