--- a/.travis.yaml
+++ b/.travis.yaml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t ramchava/react-docker -f Dockerfile.dev .
+  - docker build -t Ramarao002/react-docker -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true ramchava/react-docker npm run test
+  - docker run -e CI=true Ramarao002/react-docker npm run test
